@@ -14,6 +14,7 @@ Bugfixes:
 - fixed AMF3 deserializer for references from attributes to parent classes
   (Jira APPSERVER-101)
 - Jython example adjusted for new bandwidth API (Jira APPSERVER-92)
+- workaround added to deal with broken MP3 files (Jira APPSERVER-62)
 
 
 Red5 0.6rc3 (2007-04-11)
